[package]
name = "lolcoin-api-server"
version = "0.1.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
publish = false
rust-version = "1.61.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-http = "3.0.4"
actix-cors = "0.6.1"
borsh = { version = "0.9.1" }
derive_more = "0.99.9"
dotenv = "0.15.0"
futures = "0.3.5"
hex = "0.4"
num-traits = "0.2.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ed25519-dalek = { version = "1" }
slip10 = "0.4.3"

near-crypto = "0.14"
near-primitives = "0.14.0"
near-jsonrpc-client = "0.4.0-beta.0"
near-jsonrpc-primitives = "0.14.0"
bip39 = "1.0.1"
