[package]
name = "lolcoin-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
dotenv = "0.15.0"
futures = "0.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

near-lake-framework = "0.5.0"
once_cell = "1.13.0"
