[package]
name = "qbit-lolmarket-near"
version = "2.0.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "de975ed75e0f6a840c7aeb57e3414959cb59bc00" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", rev = "de975ed75e0f6a840c7aeb57e3414959cb59bc00" }
